--- a/style.css
+++ b/style.css
@@ -1,245 +1,226 @@
-@import url('https://fonts.cdnfonts.com/css/inter');
+@import url("https://fonts.cdnfonts.com/css/inter");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-family: sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: sans-serif;
 }
 
-.page{
-   width: 100%;
-   height: 1962px;
-   top:70px;
-   left:83px;
+.page {
+  width: 100%;
+  height: 1962px;
+  top: 70px;
+  left: 83px;
 }
 
 /*====== Header Styling ===== */
 .header {
-    height: 58px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 1);
-   
-    padding: 18px 100px ;
-    text-align: center;
-    box-shadow: rgba(171, 190, 209, 0.4);
-    gap: 43.85px;
-    
+  height: 58px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 1);
 
-  }
-
-.logo{
-    width: 107px;
-    height: 16px;
-    float: left;
-    padding-left: 60px;
-    margin-bottom: 20px;
-    padding-top: 5px;
-}
-.navbar{
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-   
-    
+  padding: 18px 100px;
+  text-align: center;
+  box-shadow: rgba(171, 190, 209, 0.4);
+  gap: 43.85px;
 }
 
- li {
-    display: inline-block;
-    text-transform: capitalize;
-    text-decoration: none;
-    padding-top: 5px;
+.logo {
+  width: 107px;
+  height: 16px;
+  float: left;
+  padding-left: 60px;
+  margin-bottom: 20px;
+  padding-top: 5px;
 }
- li a{
-    text-decoration: none;
-    color:rgb(24, 25, 25);
-    font-family: sans-serif;
-    padding: 0 20px;
-    
- }
+.navbar {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
 
- .btn{
-    width: 134px;
-    height: 34px;
-    padding: 8px 22px;
-    border-radius: 2px;
-    background-color: rgba(76, 175, 79, 1);
-    border: none;
-    transition: 0.3s ease;
-    
-    
- }
+li {
+  display: inline-block;
+  text-transform: capitalize;
+  text-decoration: none;
+  padding-top: 5px;
+}
+li a {
+  text-decoration: none;
+  color: rgb(24, 25, 25);
+  font-family: sans-serif;
+  padding: 0 20px;
+}
 
- .btn:hover{
-    background-color: rgb(188, 239, 45);
-    transition: background-color 0.3 ease; transform: all 0.4 ease;
- }
+.btn {
+  width: 134px;
+  height: 34px;
+  padding: 8px 22px;
+  border-radius: 2px;
+  background-color: rgba(76, 175, 79, 1);
+  border: none;
+  transition: 0.3s ease;
+}
 
- .btn a{
-    text-decoration: none;
-    color:white;
-    
-    
-    
-   
- }
+.btn:hover {
+  background-color: rgb(188, 239, 45);
+  transition: background-color 0.3 ease;
+  transform: all 0.4 ease;
+}
 
- /*==== Hero Section Styling =====*/
+.btn a {
+  text-decoration: none;
+  color: white;
+}
 
- .hero{
-    width: 100%;
-    height: 416px;
-    padding: 100px 200px;
-    background-color: rgba(245, 247, 250, 1);
-    display: flex;
-    justify-content: center;
-    gap:60px;
- }
+/*==== Hero Section Styling =====*/
+
+.hero {
+  width: 100%;
+  height: 416px;
+  padding: 100px 200px;
+  background-color: rgba(245, 247, 250, 1);
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+}
 /*==== Hero Section Text Styling =====*/
- .left{
-    width: 457px;
-    height: 192px;
-    padding-top: 50px;
-    gap:22px;
-    
- }
+.left {
+  width: 457px;
+  height: 192px;
+  padding-top: 50px;
+  gap: 22px;
+}
 
- .left h1{
-    font-family: inter, sans-serif;
-    font-weight: 600;
-    font-size: 44px;
-    line-height: 52px;
-    letter-spacing: 0%;
-    color: rgba(77, 77, 77, 1);
+.left h1 {
+  font-family: inter, sans-serif;
+  font-weight: 600;
+  font-size: 44px;
+  line-height: 52px;
+  letter-spacing: 0%;
+  color: rgba(77, 77, 77, 1);
+}
 
- }
+.left h1 span {
+  color: rgba(76, 175, 79, 1);
+}
 
- .left h1 span{
-    color: rgba(76, 175, 79, 1);
- }
-
- .left p{
-    font-family: sans-serif;
-    font-weight: 400;
-    font-size: 15px ;
-    line-height: 16px;
-    letter-spacing: 0%;
-    color: rgba(113, 113, 113, 1);
-    margin-top: 15px;
-    
- }
+.left p {
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 16px;
+  letter-spacing: 0%;
+  color: rgba(113, 113, 113, 1);
+  margin-top: 15px;
+}
 
 /*==== Hero Section Image Styling =====*/
 
- .right{
-    width: 272px;
-    height: 283px;
-
- }
-
- .left button{
-    width: 89px;
-    height: 36px;
-    border-radius: 2.5px;
-    padding: 10px 22px;
-    margin-top: 15px;
-    background-color: rgba(76, 175, 79, 1);
-    border: none;
-    transition: 0.3s ease;
-   
- }
-
- .left button a{
-    color: white;
-    text-decoration: none;
- }
-
-  button:hover{
-    background-color: rgb(188, 239, 45);
-    transition: background-color 0.3 ease; transform: all 0.4 ease;
- }
-
- /*==== Client Section Styling =====*/
-
- .client{
-    width: 100%;
-    height: 132px;
-    padding: 0 100px;
-    background-color: rgba(255, 255, 255, 1);
-    padding-top: 40px;
-    padding: 0 100px;
-    gap: 11px;
-
- }
-
- .client h2{
-    font-family: sans-serif;
-    font-weight: 700px;
-    font-size: 30px;
-    line-height: 70px;
-    letter-spacing: 0%;
-    text-align: center;
-    color: rgba(77, 77, 77, 1);
+.right {
+  width: 272px;
+  height: 283px;
 }
 
-.client p{
-    font-family: sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 10px;
-    letter-spacing: 0%;
-    text-align: center;
-    color: rgba(113, 113, 113, 1);
+.left button {
+  width: 89px;
+  height: 36px;
+  border-radius: 2.5px;
+  padding: 10px 22px;
+  margin-top: 15px;
+  background-color: rgba(76, 175, 79, 1);
+  border: none;
+  transition: 0.3s ease;
+}
+
+.left button a {
+  color: white;
+  text-decoration: none;
+}
+
+button:hover {
+  background-color: rgb(188, 239, 45);
+  transition: background-color 0.3 ease;
+  transform: all 0.4 ease;
+}
+
+/*==== Client Section Styling =====*/
+
+.client {
+  width: 100%;
+  height: 132px;
+  padding: 0 100px;
+  background-color: rgba(255, 255, 255, 1);
+  padding-top: 40px;
+  padding: 0 100px;
+  gap: 11px;
+}
+
+.client h2 {
+  font-family: sans-serif;
+  font-weight: 700px;
+  font-size: 30px;
+  line-height: 70px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: rgba(77, 77, 77, 1);
+}
+
+.client p {
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 10px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: rgba(113, 113, 113, 1);
 }
 
 /*==== Client Section Logo Styling =====*/
-.logos{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-    width: 800px;
-    height: 68px;
-    margin-left: 20%;
-   
+.logos {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  width: 800px;
+  height: 68px;
+  margin-left: 20%;
 }
 
 /*==== Community Section Styling =====*/
 
-.community{
-    width: 100%;
-    height: 84px;
-    gap:5px;
+.community {
+  width: 100%;
+  height: 84px;
+  gap: 5px;
 }
 
-.community h2{
-    text-align: center;
-    font-weight: 600;
-    font-size: 25px;
-    margin-top: 60px;
-    line-height: 30px;
-    letter-spacing: 0%;
-    color: rgba(77, 77, 77, 1);
+.community h2 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 25px;
+  margin-top: 60px;
+  line-height: 30px;
+  letter-spacing: 0%;
+  color: rgba(77, 77, 77, 1);
 }
 
-.community p{
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 16px;
-    letter-spacing: 0%;
-    text-align: center;
-    color:rgba(113, 113, 113, 1);
+.community p {
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 16px;
+  letter-spacing: 0%;
+  text-align: center;
+  color: rgba(113, 113, 113, 1);
 }
 
-.card{
-   width: 100%;
-   height: 196px;
-   
+.card {
+  width: 100%;
+  height: 196px;
+  margin-top: 20px;
   display: flex;
   justify-content: space-around;
   justify-items: center;
   padding: 0 100px;
-  
 }
-
-
