--- a/style.css
+++ b/style.css
@@ -224,3 +224,9 @@ button:hover {
   justify-items: center;
   padding: 0 100px;
 }
+.unlock{
+   width: 100%;
+   height: 301px;
+   margin-top: 20px;
+  padding:  0 250px;
+}
