--- a/style.css
+++ b/style.css
@@ -230,3 +230,19 @@ button:hover {
    margin-top: 20px;
   padding:  0 250px;
 }
+
+.achiv {
+background-color: rgba(245, 247, 250, 1);
+   width: 100%;
+   height: 301px;
+   margin-top: 20px;
+  padding:  0 250px;
+}
+
+.Footer1{
+   width: 100%;
+   height: 301px;
+   background-color: rgba(245, 247, 250, 1);
+   
+  padding:  0 250px;
+}
