--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   height: 58px;
   width: 100%;
   background-color: rgba(255, 255, 255, 1);
-
+position: fixed;
   padding: 18px 100px;
   text-align: center;
   box-shadow: rgba(171, 190, 209, 0.4);
@@ -194,6 +194,7 @@ button:hover {
   width: 100%;
   height: 84px;
   gap: 5px;
+  margin-top: 60px;
 }
 
 .community h2 {
@@ -213,17 +214,56 @@ button:hover {
   letter-spacing: 0%;
   text-align: center;
   color: rgba(113, 113, 113, 1);
+  
 }
 
-.card {
-  width: 100%;
-  height: 196px;
-  margin-top: 20px;
+/*===== Cards Styling =====*/
+ 
+.membership-section {
   display: flex;
-  justify-content: space-around;
-  justify-items: center;
-  padding: 0 100px;
+  gap: 20px;
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
 }
+
+.membership-card {
+  background: #f9f9f9;
+  padding: 30px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  width: 300px;
+  transition: all 0.3s ease;
+}
+
+.membership-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+}
+
+.icon {
+  font-size: 40px;
+  margin-bottom: 15px;
+}
+
+.icon3{
+  font-size: 50px;
+  
+}
+
+h2 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #666;
+}
+
+
 .unlock{
    width: 100%;
    height: 301px;
